--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     background-color: #131516;
     color: #d8d4cf;
   }
+  #footer {
+    position: relative;
+    margin-top: -180px;
+    /* negative value of footer height */
+    height: 180px;
+    clear: both;
+    background-color: red;
+  }
 </style>
 </head>
 <body>
 <p>ez</p>
 <img src="remi.png"></img>
 <br>
-<img src="https://media.discordapp.net/attachments/647798243714924569/833328066914156574/remipuknijsie.gif"></img>
+<img id="footer" src="https://media.discordapp.net/attachments/647798243714924569/833328066914156574/remipuknijsie.gif"></img>
 </body>
 </html>
