--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     color: #d8d4cf;
   }
   #footer {
-    position: relative;
-    margin-top: -180px;
-    /* negative value of footer height */
-    height: 180px;
-    clear: both;
-    background-color: red;
+    position:fixed;
+    bottom:0;
+    left:0;
   }
 </style>
 </head>
