--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
 <img src="remi.png"></img>
 <br>
 <img id="footer" src="https://media.discordapp.net/attachments/647798243714924569/833328066914156574/remipuknijsie.gif"></img>
+<br>
+<video width="320" height="240" controls>
+<source src="https://storage.googleapis.com/crested-guru-309909/NPINT9X4CSM/st23_the-melancholy-of-haruhi-suzumiya-episode-1.1618596810.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video> 
 </body>
 </html>
