--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <br>
 <img id="footer" src="https://media.discordapp.net/attachments/647798243714924569/833328066914156574/remipuknijsie.gif"></img>
 <br>
-<script src = "./lib/pdf.js" type = "text/javascript"></script>
+<script src = "./pdfkit.standalone.js" type = "text/javascript"></script>
   <script>
 
     /* create the PDF document */
