--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <img id="footer" src="https://media.discordapp.net/attachments/647798243714924569/833328066914156574/remipuknijsie.gif"></img>
 <br>
 
-<script src="https://github.com/devongovett/pdfkit/releases/download/v0.10.0/pdfkit.standalone.js"></script>
+<script src="https://unpkg.com/pdfkit@0.10.0/js/pdfkit.js"></script>
 <script src="https://github.com/devongovett/blob-stream/releases/download/v0.1.3/blob-stream.js"></script>
 <div>PDF Output <button onclick="download()">Download</button></div>
 <iframe width="100%" height="800px"></iframe>
