--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 </head>
 <body>
 <p>ez</p>
-<img src="remi.png"></img>
 <br>
-<img id="footer" src="https://media.discordapp.net/attachments/647798243714924569/833328066914156574/remipuknijsie.gif"></img>
+<a href="./bloat.html">literally hitler</a>
 <br>
 
 </body>
