--- a/time.html
+++ b/time.html
@@ -3,7 +3,7 @@
     <title>teh clock</title>
   </head>
   <body>
-    <span id=clock></span>
+    <span id=clock style="font-family:CozetteVector;font-size:18px;"></span>
     <script>
       var span = document.getElementById('clock');
       function upd_time() {
