--- a/time.html
+++ b/time.html
@@ -2,7 +2,7 @@
   <head>
     <title>teh clock</title>
     <style>
-      @font-face { font-family: CozetteV; src: url('https://github.com/slavfox/Cozette/releases/download/v.1.9.3/CozetteVector.otf'); }
+      @font-face { font-family: CozetteV; src: url('CozetteVector.otf'); }
     </style>
   </head>
   <body>
