--- a/time.html
+++ b/time.html
@@ -6,7 +6,7 @@
     </style>
   </head>
   <body>
-    <span id=clock style="font-family:CozetteV;font-size:18px;"></span>
+    <span id=clock style="font-family:CozetteVector,CozetteV;font-size:18px;"></span>
     <script>
       var span = document.getElementById('clock');
       var urlParams = new URLSearchParams(window.location.search);
