--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <body>
 <p>ez</p>
 <br>
+<video>
+  <source src="video0-4.mp4" type="video/mp4">
+  this is a video so that you know if you have it disabled ez
+</video>
+<br>
 <a href="./bloat.html">literally hitler</a>
 <br>
 
