--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <html>
 <head>
 <title>jeszcze jak, może, nawet musi</title>
-<style>
-  body{
-    background-color: #131516;
-    color: #d8d4cf;
-  }
-  #footer {
-    position:fixed;
-    bottom:0;
-    left:0;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <p>ez</p>
