--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <p>ez</p>
 <br>
-<video>
+<video controls>
   <source src="video0-4.mp4" type="video/mp4">
   this is a video so that you know if you have it disabled ez
 </video>
