--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 <title>jeszcze jak, może, nawet musi</title>
 <link rel="stylesheet" href="style.css">
+<style>
+  a { color: inherit; } 
+</style>
 </head>
 <body>
 <p>ez</p>
@@ -12,6 +15,7 @@
 </video>
 <br>
 <a href="./bloat.html">literally hitler</a>
+<a href="./bloat.html">literally remilia</a>
 <br>
 
 </body>
