--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </video>
 <br>
 <a href="./bloat.html">literally hitler</a>
-<a href="./bloat.html">literally remilia</a>
+<a href="https://remilia.smierdzi.xyz">literally remilia</a>
 <br>
 
 </body>
