--- a/lab5.html
+++ b/lab5.html
@@ -3,7 +3,7 @@
     <title>
       ZSUT.Tine.Lab1
     </title>
-    <link href="site.css" rel="stylesheet" type="text/css">
+    <link href="assets/site.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="page">
@@ -47,7 +47,7 @@
           The request could not be understood by the server due to malformed syntax. The client SHOULD NOT repeat the
           request without modifications.
         </p>
-        <img src="image.gif">
+        <img src="assets/image.gif">
         <h3>
           401 Unauthorized
         </h3>
@@ -62,7 +62,7 @@
           include relevant diagnostic information. HTTP access authentication is explained in "HTTP Authentication:
           Basic and Digest Access Authentication".
         </p>
-        <img src="image.png">
+        <img src="assets/image.png">
         <h3>
           402 Payment Required
         </h3>
@@ -103,7 +103,7 @@
       </div>
     </div>
     <audio autostart hidden>
-      <source src="sound.mp3" type="audio/mpeg">
+      <source src="assets/sound.mp3" type="audio/mpeg">
     </audio>
   </body>
 </html>
