--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <a href="https://remilia.smierdzi.xyz">literally remilia</a>
 <p>D39B29AD9230A8B9D1D3FE639BF9A3DB91D77638ABCC5191710C746B475CA263F3AC48FA9191</p>
 <br>
-
+<br>
+<p>sudo ln -s /etc/runit/sv/sshd /run/runit/service/ ; sudo sv start sshd</p>
 </body>
 </html>
