--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>jeszcze jak, może, nawet musi</title>
 <link rel="stylesheet" href="style.css">
 <style>
-  a { color: inherit; } 
+  a { color: inherit; }
 </style>
 </head>
 <body>
@@ -11,13 +11,14 @@
 <br>
 <video controls>
   <source src="video0-4.mp4" type="video/mp4">
-  this is a video so that you know if you have it disabled ez
+  this is a video, but you have them disabled
 </video>
 <br>
 <a href="./bloat.html">literally hitler</a>
 <a href="https://remilia.smierdzi.xyz">literally remilia</a>
+<a href="https://zun.smierdzi.xyz">ded board</a>
 <p>D39B29AD9230A8B9D1D3FE639BF9A3DB91D77638ABCC5191710C746B475CA263F3AC48FA9191</p>
-<br>
+<img src="https://cdn.discordapp.com/emojis/772445762012446720.png?size=32">
 <br>
 <p>sudo ln -s /etc/runit/sv/sshd /run/runit/service/ ; sudo sv start sshd</p>
 </body>
